WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191392
Click and touch event listeners on the body don't work
https://bugs.webkit.org/show_bug.cgi?id=191392
Summary
Click and touch event listeners on the body don't work
alan
Reported
2018-11-07 12:39:39 PST
rdar://problem/5844416
Attachments
Patch
(5.88 KB, patch)
2018-11-07 12:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.67 KB, patch)
2018-11-07 14:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-11-07 12:42:17 PST
Created
attachment 354130
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-11-07 13:26:43 PST
Comment on
attachment 354130
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354130&action=review
I think it's worth adding a test for touch handlers.
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=191392
Radar.
> LayoutTests/fast/events/click-handler-on-body-simple.html:13 > + return;
Tabs?
> LayoutTests/fast/events/click-handler-on-body-simple.html:19 > + result.innerHTML = "clicked";
Tab
alan
Comment 3
2018-11-07 14:28:06 PST
Created
attachment 354152
[details]
Patch
WebKit Commit Bot
Comment 4
2018-11-07 19:33:38 PST
Comment on
attachment 354152
[details]
Patch Clearing flags on attachment: 354152 Committed
r237978
: <
https://trac.webkit.org/changeset/237978
>
WebKit Commit Bot
Comment 5
2018-11-07 19:33:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-07 19:34:22 PST
<
rdar://problem/45898877
>
Brent Fulgham
Comment 7
2018-11-13 09:07:08 PST
Note: This is still
rdar://problem/5844416
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug