Click and touch event listeners on the body don't work https://bugs.webkit.org/show_bug.cgi?id=191392 <rdar://problem/5844416>

Reviewed by Simon Fraser.

Source/WebCore:

Remove the old quirk of ignoring onclick handlers on the body and beyond.

Test: fast/events/click-handler-on-body-simple.html

* page/ios/FrameIOS.mm:
(WebCore::Frame::nodeRespondingToClickEvents):

LayoutTests:

* fast/events/click-handler-on-body-simple-expected.txt: Added.
* fast/events/click-handler-on-body-simple.html: Added.
* fast/events/touch/touch-handler-on-body-simple-expected.txt: Added.
* fast/events/touch/touch-handler-on-body-simple.html: Added.


Canonical link: https://commits.webkit.org/206200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237978 268f45cc-cd09-0410-ab3c-d52691b4dbfc